--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,4 +1,5 @@
-- provide(:title, 'Your notifications')
+- provide(:title, 'Your Messages')
+- provide(:subtitle, 'View messages from other users')
 
 = will_paginate @messages, class: "nexus_pagination", :inner_window => 2, :outer_window => 2
 
