--- a/app/views/cases/index.html.haml
+++ b/app/views/cases/index.html.haml
@@ -1,4 +1,5 @@
 - provide(:title, 'Your Cases')
+- provide(:subtitle, 'View your cases')
 
 = will_paginate @cases, class: "nexus_pagination", :inner_window => 2, :outer_window => 2
 
@@ -14,6 +15,8 @@
         %span.timestamp
           #{time_ago_in_words(c.created_at)} ago.
   - else
-    %p You have no cases
+    %h3 You have no cases
+    %h5
+      Use the user map or the roulette page to find new case partners and start practising!
 
 = will_paginate @cases, class: "nexus_pagination", :inner_window => 2, :outer_window => 2
