--- a/app/views/cases/new.html.haml
+++ b/app/views/cases/new.html.haml
@@ -1,20 +1,24 @@
-- provide(:title, 'Send Feedback')
+- provide(:title, 'Send case feedback')
+- provide(:subtitle, 'Complete the form below to inform another user on their performance in a practise case')
 
-%h1 Send Case Feedback
 = form_for(@case) do |f|
+
+  / error message div
   = render 'shared/error_messages', object: @case
 
   .case_form
     .row(style="margin-bottom:15px;")
       .span4
-        .field_text
-          = f.text_field :user_id, placeholder: "Partner id", tabindex: "1"
-        .field_text
-          = f.text_field :email, placeholder: "Partner email", tabindex: "2"
+        / display target name
+        %h5
+          Feedback For:
+        .target_name
+          = @target.name
+
+      .span4
         .field_text         
           = f.text_field :date, placeholder: "Date", id: "datepicker", tabindex: "3"
-      .span4
-        .field
+        .field_text
           = f.text_area :subject, placeholder: "Subject", tabindex: "4"
         .field_text         
           = f.text_field :source, placeholder: "Source", tabindex: "5"
@@ -82,9 +86,6 @@
         = f.submit "Submit", class: "btn btn-large btn-inverse pull-right", tabindex: "12"
 
 :javascript
-  //$(document).ready(function(){
-  //if decide to reset all slider inputs to zero use this    
-  //)};
 
   $(function() {
     $(".slider").slider({
