--- a/app/views/posts/_post_form.html.haml
+++ b/app/views/posts/_post_form.html.haml
@@ -11,3 +11,6 @@
     .field
       = f.text_area :content, placeholder: "Compose new post...", :rows => 3
 
+    %button.btn.btn-inverse.pull-right{:type => "submit"}
+      %i.icon-arrow-right.icon-white
+      Post
