--- a/app/views/messages/_message_form.html.haml
+++ b/app/views/messages/_message_form.html.haml
@@ -14,5 +14,5 @@
       = f.hidden_field :sender_id, :value => current_user.id
 
     %button.btn.btn-primary.btn-inverse.pull-right{:type => "submit"}
-      %i.icon-comment
+      %i.icon-arrow-right
       Send
