--- a/app/views/roulette/index.html.haml
+++ b/app/views/roulette/index.html.haml
@@ -3,55 +3,17 @@
     %span12
       .panel
         %ul.r_grid
-          -if @onlineusers
-            - @onlineusers.each do |t|
+          #window
+            = render 'show'
 
-              - @onlineuser = User.find_by_remember_token(t)
+        %a#next.btn-large.btn-inverse{:href => "#"}
+          %i.icon-random.icon-white
+          Next
 
-              %li.r_block
+/ message form jquery show
+:javascript
+  $('#next').click(function() {
 
-                %table.r_user
-                  %tr
-                    %th(style="width:100px;")
-                    %th
-                  %tr
-                    %td
-                      Name
-                    %td
-                      = @onlineuser.name
-                  %tr
-                    %td
-                      Education
-                    %td
-                      = @onlineuser.education1
-                  %tr
-                    %td
-                      Experience
-                    %td
-                      = @onlineuser.experience1
-                  %tr
-                    %td
-                      Skill
-                    %td
-                      = @onlineuser.skill
-                  %tr
-                    %td
-                      Cases to-date
-                    %td
-                      = @onlineuser.num
-                  %tr
-                    %td
-                      City
-                    %td
-                      = @onlineuser.city
-                  %tr
-                    %td
-                      Country
-                    %td
-                      = @onlineuser.country
+    $('#window').load('show');
 
-                %a{:href => "skype:#{@onlineuser.skype}?call"}
-                  %img{:alt => "My status", :src => "http://mystatus.skype.com/bigclassic/christianclough", :style => "border: none;width: 182px;height: 44px;margin:20px;"}/
-
-
-  %script{:src => "http://download.skype.com/share/skypebuttons/js/skypeCheck.js", :type => "text/javascript"}
+  });
