success AM chart date objects

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -149,6 +149,19 @@ p {
   }
 }
 
+.count {
+  font-size: 1.7em;
+  color: white;
+  letter-spacing: 1px;
+  padding-top: 7px;
+  /* font-weight: bold; */
+  line-height: 1;
+  &:hover {
+    color: white;
+    text-decoration: none;
+  }
+}
+
 /************ footer *************/
 
 footer {
