--- a/app/views/layouts/messages.html.haml
+++ b/app/views/layouts/messages.html.haml
@@ -11,7 +11,7 @@
       .panel.type1.kill_right
         %ul.sidebar
           %li
-            = link_to "Inbox (#{@messages_count})", "/messages"
+            = link_to "Inbox (#{@user_messages_count})", "/messages"
           %li
             = link_to "Sent", "/sent"
     .span9
