--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -23,17 +23,11 @@ var customIcons = {
 
 function load_map() {
 
-	//build lat-lng start position!!!
-	//if(urlidpre != null) {
-	    //var lat_start = ""; 
-	       //var lng_start = "";
-	//} else {
-	    lat_start = 51.501128232665856;
-	    lng_start = -0.14241188764572144;
-	    // apply rails < percent equals brackets below to work
-	    //lat_start = 'current_user.lat.to_i';
-	    //lng_start = 'current_user.lng.to_i';
-	//}
+	   // build lat-lng start position
+     // user_lat & _lng defined with inline javascript in users#index
+     // seems to not be possible to get 'current_user' within this .js.erb asset
+	  lat_start = user_lat;
+	  lng_start = user_lng;
 
   	var mapOptions = {
    		center: new google.maps.LatLng(lat_start, lng_start),
