--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,13 +1,12 @@
 
 = content_for :content do
   .row
-    .span7
-      .panel
-        .center.hero-unit
-          %h1 Welcome to casenexus.com
+    .span8
+      .panel.kill_right(style="height:280px;padding-top:110px;padding-right:20px;")
+        = image_tag('banner.png')
 
-    .span5
-      .panel.type1
+    .span4
+      .panel.type1.kill_left
         = form_for(:session, url: sessions_path) do |f|
           = f.label :email
           = f.text_field :email
@@ -15,7 +14,8 @@
           = f.password_field :password
           = f.submit "Sign in", class: "btn btn-inverse pull-right"
 
-      .center
-        %p
-          This site does things
-        = link_to "Sign up now!", signup_path, class: "btn btn-large btn btn-inverse"
+      .panel.kill_left
+        .center
+          %p
+            This site does things
+          = link_to "Sign up now!", signup_path, class: "btn btn-large btn btn-inverse"
