banner.png tweak

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -3,7 +3,7 @@
   .row
     .span8
       .panel.kill_right(style="height:280px;padding-top:110px;padding-right:20px;")
-        = image_tag('banner.png')
+        = image_tag('art/banner.png')
 
     .span4
       .panel.type1.kill_left
