--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,12 +13,8 @@
     = render 'layouts/header'
 
     / flash div 
-    #flash_application(style="margin-top:0px;")
+    #flash_application
       = render :partial => 'layouts/flash' , :locals => { :flash => flash }
-      ////// some nice buttons for flashes - to be implemented later
-      / %p
-      /   %a.btn.btn-danger{:href => "#"} Take this action
-      /   %a.btn{:href => "#"} Or do this
 
     .container.main
 
