finish post approval syste,

--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -39,7 +39,7 @@
               %ul.dropdown-menu
                 %li
                   %a.filter_pulldown_item
-                    = radio_button_tag :type, 'ten', checked: true
+                    = radio_button_tag :type, 'fifty', checked: true
                     Within 50km
                 %li
                   %a.filter_pulldown_item
